Adjusted FreeNono code to Java 11.